<resources>
	<string name="app_name"
		translatable="false">HueTastic</string>
	<string name="title_activity_main">HueTastic</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<string name="title_activity_find_hue_bridge">FindHueBridgeActivity</string>
	<string name="searching_hue_bridges_title">Looking for Philips Hue bridges…</string>

	<plurals name="searching_hue_bridges">
		<item quantity="zero">Looking for bridges…</item>
		<item quantity="one">Found one bridge…</item>
		<item quantity="other">Found %d bridges…</item>
	</plurals>

	<string name="title_activity_connect_to_bridge">Bridge address</string>

	<string name="button_search_again_for_bridges">Search again</string>
	<string name="button_cancel_bridge_connection_process">Cancel</string>
	<string name="button_connect_to_bridge">Connect</string>
	<string name="text_bridges_found_please_select">We found %d Philips Hue bridges in your
	network. Please select the bridge you want to connect to and continue connecting.</string>
</resources>
