<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_connect_to_bridge"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="biz.huetz.apps.huetastic.ConnectToBridgeActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="17dp"
		android:layout_marginTop="46dp"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView"
			android:layout_width="333dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="124dp"
			android:layout_marginTop="44dp"
			android:text="@string/text_bridges_found_please_select" />


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<Button
				android:id="@+id/buttonSearchAgain"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_search_again_for_bridges" />

			<Button
				android:id="@+id/buttonCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_cancel_bridge_connection_process" />

			<Button
				android:id="@+id/buttonConnect"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_connect_to_bridge" />
		</LinearLayout>

	</LinearLayout>
</RelativeLayout>
