<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	tools:context="biz.huetz.apps.huetastic.FindHueBridgeActivity">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="centerCrop"
		android:src="@mipmap/bridge_discovery" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true">

		<LinearLayout
			android:id="@+id/initial_bridge_discovery_view"
			style="?metaButtonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|center_horizontal"
			android:background="@color/black_overlay"
			android:orientation="vertical"
			android:padding="12sp"
			android:visibility="visible"
			tools:ignore="UselessParent">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:keepScreenOn="true"
				android:text="@string/searching_hue_bridges_title"
				android:textColor="@color/brightText"
				android:textSize="24sp"
				android:textStyle="bold" />

			<ProgressBar
				android:id="@+id/progressBar"
				style="?android:attr/progressBarStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:paddingTop="10sp" />

			<TextView
				android:id="@+id/looking_for_bridges_and_found_x_bridges"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:keepScreenOn="true"
				android:text="PLURAL TEXT FILLED DURING RUNTIME"
				android:textColor="@color/brightText"
				android:textSize="12sp"
				android:textStyle="bold" />

		</LinearLayout>

		<LinearLayout
			android:id="@+id/select_bridge_to_connect_to"
			style="?metaButtonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|center_horizontal"
			android:background="@color/black_overlay"
			android:orientation="vertical"
			android:padding="12sp"
			android:visibility="gone"
			tools:ignore="UselessParent">

			<TextView
				android:id="@+id/intro_x_bridges_found_please_select"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:keepScreenOn="true"
				android:text="@string/text_bridges_found_please_select"
				android:textColor="@color/brightText" />

			<RadioGroup
				android:id="@+id/bridge_connection_radio_group"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

			</RadioGroup>

			<Button
				android:id="@+id/button_connect_to_bridge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/button_connect_to_bridge" />

		</LinearLayout>
	</FrameLayout>

</FrameLayout>
